--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,21 @@ endif()
 # Initialize the SDK
 pico_sdk_init()
 
+# Set the path to your .pio file and the output header file.
+set(QUADDEC_PIO_FILE "${CMAKE_CURRENT_SOURCE_DIR}/quaddec_encoder.pio")
+set(QUADDEC_PIO_HEADER "${CMAKE_CURRENT_SOURCE_DIR}/quaddec_encoder.pio.h")
+
+# Add a custom command to generate the header file from the .pio file.
+add_custom_command(
+    OUTPUT ${QUADDEC_PIO_HEADER}
+    COMMAND pioasm ${QUADDEC_PIO_FILE} -o ${QUADDEC_PIO_HEADER}
+    DEPENDS ${QUADDEC_PIO_FILE}
+    COMMENT "Generating ${QUADDEC_PIO_HEADER} from ${QUADDEC_PIO_FILE}"
+)
+
+# Then, add a custom target that depends on the generated header.
+add_custom_target(quaddec_pio ALL DEPENDS ${QUADDEC_PIO_HEADER})
+
 # Set common compile options
 add_compile_options(-Wall
     -Wno-format          # Suppress format warnings (e.g., int vs int32_t differences)
@@ -56,6 +71,8 @@ add_executable(ratawoulfie_official_2025
     src/Subsystems/Drive/Motor.cpp
     src/Subsystems/Sensors/Encoder.cpp
 )
+
+add_dependencies(ratawoulfie_official_2025 quaddec_pio)
 
 # Allows files to throw exceptions.
 set_source_files_properties(src/Maze_Traversal/Maze/Cell.cpp PROPERTIES COMPILE_FLAGS "-fexceptions")
