--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -102,5 +102,6 @@
         "cinttypes": "cpp",
         "typeinfo": "cpp",
         "variant": "cpp"
-    }
+    },
+    "C_Cpp.errorSquiggles": "enabled"
 }
